...
const limit = __DEV__ ? 30 : 30;

const CONTENT = [
  {
    id: 1,
    key: 'Media',
    label: 'Add photo',
    icon: <AddMediaIconSvg />,
  },
  {
    id: 5,
    key: 'video',
    label: 'Add video',
    icon: <AddMediaIconSvg />,
  },
  {
    id: 2,
    key: 'Audio',
    label: 'Record audio note',
    icon: <RecordAudioIconSvg />,
  },
  {
    id: 3,
    key: 'Document',
    label: 'Add document',
    icon: <AddDocumentIconSvg />,
  },
  {
    id: 4,
    key: 'Location',
    label: 'Add location',
    icon: <AddLocationIconSvg />,
  },
];
const audioRecorderPlayer = new AudioRecorderPlayer();

AWS.config.update({
...
      }
    };
  }, [isSocketConnected, socket, isFocused, appStateGlobal, realm]);

  /// useffect to resend offline messages
  const resendOfflineMessages = useCallback(() => {
    const offlineMessages = realm.objects('Message').filtered('status == 0');
    console.log('offline messages', Platform.OS, offlineMessages);
    offlineMessages.forEach(message => {
      if (VARIABLES.user._id === message.sender) {
        sendThroughSocket(message);
      }
    });
...
        if (!socket) {
          return;
        }

        console.log('message to send', messgeParse, 's3 response', s3response);

        socket.emit('sendMessage', {
          ...messgeParse,
          message: messgeParse.message,
          nonce: s3response.nonce,
        });
      } catch (error) {
        setloading(false);
...
                    onChangeText={handleTextChange}
                    multiline
                  />

                  {message?.length === 0 && (
                    <Pressable
                      testID="emojiMessage"
                      hitSlop={10}
                      onPress={() => {
                        if (realm.isClosed) {
                          ToastMessage(
                            'Something went wrong please close your app and open again',
                          );
...
                        }}
                      />
                    </Pressable>
                  )}
                  {message?.length === 0 && !quotedMessage && (
                    <Pressable
                      testID="chatPlusIcon"
                      onPress={handlePresentModalPress}>
                      <Image
                        source={APP_IMAGE.addCircle}
                        style={{
                          ...globalStyles.mediumIcon,
                          marginRight: scale(20),
...
                    )}
                  </Pressable>
                ) : (
                  <View />
                )}
                <Pressable
                  testID="onStopRecordingChat"
                  onPress={() => {
                    if (!isAudioRecording) {
                      audioPermissions();
                    } else {
                      onStopRecord();
                    }
...
                      ) : (
                        <PlayRecordAudioIconSvg />
                      )}
                    </>
                  ) : (
                    <Pressable
                      testID="sendRecordingChat"
                      onPress={() => {
                        sendAudioNote();
                      }}>
                      <Image
                        source={APP_IMAGE.sendMessageActive}
                        style={{
...
