...
                <CameraIconSvg style={{width: 50, height: 50}} />
                <Text style={styles.text}>Chat</Text>
              </View>
            </TouchableOpacity>

            <TouchableOpacity
              testID="openImagePickerButton"
              style={{
                width: '45%',
                height: '100%',
                backgroundColor: '#F4F4F5',
                padding: 25,
                borderRadius: 10,
...
