...
            </View>
          </View>
          <View style={styles.divider} />
        </>
        <>
          <View style={styles.viewRow}>
            <Text style={styles.textTitle}>Sticky Notes</Text>
            <View style={{flexDirection: 'row', alignItems: 'center'}}>
              {!stickyNotes && <Text style={styles.textOff}>OFF</Text>}
              <SwitchCustom
                value={stickyNotes}
                onValueChange={val => setStickyNotes(val)}
              />
...
