appId: com.closer.application
---
- launchApp
- extendedWaitUntil:
    visible: "Sticky Notes"
    timeout: 10000
- tapOn:
    point: "12%,93%"
- tapOn: "Message"
- inputText: 'dummy text'
- tapOn:
     id: 'sendMessage'
- tapOn:
     id: 'emojiMessage'
- tapOn:
    point: "50%,48%"
- tapOn:
     id: 'chatPlusIcon'
- tapOn: "Add photo"
- tapOn:
     id: 'openImagePickerButton'
- tapOn:
    point: "50%,16%"
- tapOn:
    point: "37%,18%"
- tapOn:
    point: "37%,18%"
- tapOn:
    point: "37%,18%"
- tapOn:
     id: 'chatPlusIcon'
- tapOn: "Record audio note"
- tapOn:
     id: "onStopRecordingChat"
- tapOn:
     id: "sendRecordingChat"
- tapOn:
     id: 'chatPlusIcon'
- tapOn: "Add location"

